# IVANNA-FUSION-PRO

./: .gitignore  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ivanna_dsp_jni.cpp
app/src/main/cpp/dsp/: Compressor.cpp  GainStage.cpp  StereoWidener.cpp
app/src/main/cpp/include/: Compressor.h  GainStage.h  dsp_types.h
app/src/main/java/com/ivanna/fusion/pro/: DSPBridge.kt  DSPState.kt  MainActivity.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
